# unicef-djangolib

./: .flake8  .gitignore  .isort.cfg  .travis.yml  CHANGES  MANIFEST.in  Makefile  Pipfile  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py  test.sh  tox.ini
.circleci/: common.sh  config.yml  test-circle.sh  test-local.sh  test-remote.sh
src/requirements/: install.pip  install.txt  test.txt  testing.pip
src/unicef_djangolib/: __init__.py  admin_utils.py  etag.py  fields.py  forms.py  middleware.py
src/unicef_djangolib/drf/: exports.py  permissions.py  renderers.py  views.py
src/unicef_djangolib/templates/: 403.html  404.html  500.html  _base.html  http_codes_base.html
src/unicef_djangolib/templates/includes/: footer.html  header.html
src/unicef_djangolib/templatetags/: djangolib.py
tests/: .coveragerc  conftest.py  factories.py  test_admin_utils.py  test_etag.py  test_fields.py  test_forms.py  test_middleware.py  test_renderers.py  test_templatetags.py
tests/demoproject/: db.sqlite3
tests/demoproject/demo/: factories.py  forms.py  settings.py  urls.py  views.py
tests/demoproject/demo/sample/: admin.py  api.py  forms.py  models.py  serializers.py  urls.py
tests/demoproject/demo/sample/migrations/: 0001_initial.py
tests/test_drf/: test_exports.py  test_permissions.py  test_renderers.py  test_views.py
